Introduce grouping of TLAs (#1)