@@ -1,6 +1,6 @@
 package org.contextmapper.sample.tlas.infrastructure.persistence.internal_repos;
 
-import org.contextmapper.sample.tlas.domain.tla.ThreeLetterAbbreviation;
+import org.contextmapper.sample.tlas.domain.tla.TLAGroup;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
@@ -13,7 +13,6 @@ import software.amazon.awssdk.services.dynamodb.model.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class DynamoDBThreeLetterAbbreviationRepository {
@@ -28,34 +27,34 @@ public class DynamoDBThreeLetterAbbreviationRepository {
             .httpClient(UrlConnectionHttpClient.builder().build())
             .build();
 
-    public Optional<ThreeLetterAbbreviation> findById(final String name) {
+    public Optional<TLAGroup> findById(final String name) {
         GetItemResponse getItemResponse = dynamoDbClient.getItem(GetItemRequest.builder()
                 .key(Map.of("name", AttributeValue.builder().s(name).build()))
                 .tableName(TABLE_NAME)
                 .build());
         if (getItemResponse.hasItem()) {
-            return Optional.of(TLAMapper.tlaFromDynamoDB(getItemResponse.item()));
+            return Optional.of(TLAGroupMapper.tlaGroupFromDynamoDB(getItemResponse.item()));
         } else {
             return Optional.empty();
         }
     }
 
-    public List<ThreeLetterAbbreviation> findAll() {
+    public List<TLAGroup> findAll() {
         ScanResponse scanResponse = dynamoDbClient.scan(ScanRequest.builder()
                 .tableName(TABLE_NAME)
                 .build());
 
-        logger.info("Scan returned: {} TLAs", scanResponse.count());
+        logger.info("Scan returned: {} TLA groups", scanResponse.count());
 
         return scanResponse.items().stream()
-                .map(i -> TLAMapper.tlaFromDynamoDB(i))
-                .collect(Collectors.toList());
+                .map(TLAGroupMapper::tlaGroupFromDynamoDB)
+                .toList();
     }
 
-    public void putTLA(final ThreeLetterAbbreviation tla) {
+    public void putTLAGroup(final TLAGroup group) {
         dynamoDbClient.putItem(PutItemRequest.builder()
                 .tableName(TABLE_NAME)
-                .item(TLAMapper.tlaToDynamoDb(tla))
+                .item(TLAGroupMapper.tlaGroupToDynamoDb(group))
                 .build());
     }
 
